# rust_instrument_simulator

./: Cargo.toml  README.md
python_plotting/: fits.py  plot_point_sources.py  thedumbway.py  view_grid.py  view_output.py  view_psf.py
src/: binom.rs  coordinate_system.rs  data.rs  data_cube_management.rs  data_frame.rs  datafile_reader.rs  demo.rs  demo_details.rs  details.rs  detector.rs  dichroic.rs  effect_descriptions.rs  effects.rs  field_of_view.rs  fits.rs  fits2.rs  flatfieldillumination.rs  frequency_response_files.rs  geometry.rs  grid.rs  grid1d.rs  grid2d.rs  hallucinate.rs  hallucinations.rs  header.rs  instrument.rs  linewisedatagen.rs  main.rs  objects.rs  plotting.rs  point.rs  point_sources.rs  psf.rs  psf_fits_reader.rs  psf_grid.rs  simulator_engine.rs  sources.rs  telescope_objects.rs  types.rs  units.rs  (+5 more)
src/old/: dichroic.rs  flatfieldillumination.rs  instrument.rs  psf_grid.rs  spectrum_examples.rs
