[package]
name = "image_simulator_outline"
version = "0.1.0"
edition = "2024"



[profile.release]
lio = "fat"
debug = true
panic = "abort"

[dependencies]

ndarray = { version =  "0.16.1", features = ["serde"] }
memmap2 = "0.9.7"
rand = "0.9.2"
csv = "1.3.1"
bytes = "1.10.1"
zerocopy = "0.8.33"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
rayon= "1.11.0"