[package]
name = "image_simulator_outline"
version = "0.1.0"
edition = "2024"



[profile.release]
lio = "fat"
debug = true
panic = "abort"

[dependencies]

ndarray = { version =  "0.16.1", features = ["serde"] }
memmap2 = "0.9.7"
rand = "0.10.0"
rand_distr = "0.6.0"
csv = "1.3.1"
bytes = "1.10.1"
zerocopy = "0.8.33"
rayon= "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34+deprecated"
bytemuck = "1.23.1"
byteorder = "1"
uvex-fitrs = "0.0.1"
plotpy = "1.21.0"
eframe = "0.34.2"
egui = "0.34.2"
egui_plot = "0.35.0"
env_logger = "0.11.10"
egui_extras = "0.34.2"
png = "0.18.1"